Add explanations for data preprocessing steps

--- a/notebooks/lap_time_exploration.ipynb
+++ b/notebooks/lap_time_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "fef0003e",
    "metadata": {},
    "outputs": [
@@ -12,18 +12,25 @@
      "text": [
       "core           INFO \tLoading data for British Grand Prix - Qualifying [v3.6.0]\n",
       "req            INFO \tUsing cached data for session_info\n",
-      "req            INFO \tUsing cached data for driver_info\n"
+      "req            INFO \tUsing cached data for driver_info\n",
+      "req            INFO \tUsing cached data for session_status_data\n",
+      "req            INFO \tUsing cached data for track_status_data\n",
+      "req            INFO \tUsing cached data for _extended_timing_data\n",
+      "req            INFO \tUsing cached data for timing_app_data\n",
+      "core           INFO \tProcessing timing data...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023 Season Round 10: British Grand Prix - Qualifying\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "req            INFO \tUsing cached data for session_status_data\n",
-      "req            INFO \tUsing cached data for track_status_data\n",
-      "req            INFO \tUsing cached data for _extended_timing_data\n",
-      "req            INFO \tUsing cached data for timing_app_data\n",
-      "core           INFO \tProcessing timing data...\n",
       "req            INFO \tUsing cached data for car_data\n",
       "req            INFO \tUsing cached data for position_data\n",
       "req            INFO \tUsing cached data for weather_data\n",
@@ -35,6 +42,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0                        NaT\n",
+      "1     0 days 00:00:28.534000\n",
+      "2     0 days 00:00:28.441000\n",
+      "3     0 days 00:00:48.387000\n",
+      "4     0 days 00:00:28.109000\n",
+      "               ...          \n",
+      "381   0 days 00:00:28.811000\n",
+      "382   0 days 00:00:42.982000\n",
+      "383   0 days 00:00:28.284000\n",
+      "384   0 days 00:00:47.151000\n",
+      "385   0 days 00:00:28.585000\n",
+      "Name: Sector1Time, Length: 386, dtype: timedelta64[ns]\n",
+      "0      SOFT\n",
+      "1      SOFT\n",
+      "2      SOFT\n",
+      "3      SOFT\n",
+      "4      SOFT\n",
+      "       ... \n",
+      "381    SOFT\n",
+      "382    SOFT\n",
+      "383    SOFT\n",
+      "384    SOFT\n",
+      "385    SOFT\n",
+      "Name: Compound, Length: 386, dtype: object\n",
       "Data types after conversion:\n",
       "S1         float64\n",
       "S2         float64\n",
@@ -81,23 +112,46 @@
     "\n",
     "# load qualifying data\n",
     "session  = fastf1.get_session(2023, 'Silverstone', 'Q')\n",
+    "print(session)\n",
     "session.load()\n",
     "\n",
     "# prepare data using same logic from your preprocess.py\n",
     "laps = session.laps\n",
+    "print(laps['Sector1Time'])\n",
+    "print(laps['Compound'])\n",
     "\n",
+    "# define a mapping for tire compounds\n",
+    "# creates a dictionary that converts categorical tire compounds to numerical values\n",
     "compound_map = {'SOFT': 0, 'MEDIUM': 1, 'HARD': 2}\n",
+    "\n",
+    "# apply the mapping to create a new column 'CompoundEncoded'\n",
+    "# this will convert the 'Compound' column to numerical values based on the mapping\n",
     "laps['CompoundEncoded'] = laps['Compound'].map(compound_map)\n",
     "\n",
     "# Convert Timedelta to seconds before doing the analysis\n",
+    "# Each F1 track is divided into three sectors:\n",
+    "# Sector 1 (S1): Start of the lap --> first time marker\n",
+    "# Sector 2 (S2): Middle of the lap\n",
+    "# Sector 3 (S3): End of the lap or last portion --> ends at finish line\n",
+    "# example Sector3Time         S3\n",
+    "#         00:00:25.876    →   25.876\n",
+    "# \n",
     "laps['S1'] = laps['Sector1Time'].dt.total_seconds()\n",
     "laps['S2'] = laps['Sector2Time'].dt.total_seconds()\n",
     "laps['S3'] = laps['Sector3Time'].dt.total_seconds()\n",
     "laps['LapTime'] = laps['LapTime'].dt.total_seconds()\n",
+    "#  Machine learning algorithms can't work with categorical data (tire compounds), models can't work with dimedelta objects(need numerical values). The dt.total_seconds() method converts\n",
+    "# pandas timedelta objects to numerical values (seconds), which is suitable for machine learning models.\n",
+    "# this makes the data ready for mathematical operations and model training\n",
+    "\n",
     "\n",
     "# Rest of your code remains the same\n",
+    "# Drop rows with NaN values in the specified columns\n",
+    "# This ensures that the model is trained only on complete data\n",
     "laps = laps.dropna(subset=['S1', 'S2', 'S3', 'TyreLife', 'CompoundEncoded', 'LapTime'])\n",
     "\n",
+    "# Select relevant columns for the model\n",
+    "# This creates a new DataFrame with only the necessary features and target variable\n",
     "data = laps[[\"S1\", \"S2\", \"S3\", \"TyreLife\", \"CompoundEncoded\", \"LapTime\"]]\n",
     "\n",
     "# Add this after the conversion to verify data types\n",
@@ -105,9 +159,20 @@
     "print(laps[[\"S1\", \"S2\", \"S3\", \"LapTime\"]].dtypes)\n",
     "\n",
     "# traing model and evaluate\n",
+    "# feature matrix X and target variable y\n",
     "X= data[[\"S1\", \"S2\", \"S3\", \"TyreLife\", \"CompoundEncoded\"]]\n",
     "y= data[\"LapTime\"]\n",
     "\n",
+    "# Split the data into training and testing sets\n",
+    "# This separates the data into two parts: one for training the model and one for testing its performance\n",
+    "# This is a common practice in machine learning to evaluate how well the model generalizes to unseen data\n",
+    "# X features (S1, S2, S3, TyreLife, CompoundEncoded), which is a matrix of input features\n",
+    "# y target variable (LapTime), which is a vector of output values\n",
+    "# the test_size parameter specifies the proportion of the dataset to include in the test split (0.2 means 20% for testing, 80% for training)\n",
+    "# X_train - 80% of features for training\n",
+    "# X_test  - 20% of features for testing\n",
+    "# y_train - 80% of lap times for training\n",
+    "# y_test  - 20% of lap times for testing\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "model = LinearRegression()\n",
